fix: fixed the nav color on scroll in dark mode

--- a/assets/css/contact.css
+++ b/assets/css/contact.css
@@ -169,9 +169,9 @@ h1{
 .scroll{
   position:fixed;
   z-index:1;
-  background-color:#fff;
+  background-color:var(--mainBackground);
   padding:0.5rem;
-  -webkit-box-shadow: 0px 1px 5px 0px rgba(0,0,0,0.2); 
+  -webkit-box-shadow: 0px 1px 5px 0px rgba(0,0,0,0.2);
   -moz-box-shadow: 0px 1px 5px 0px rgba(0,0,0,0.2);
    box-shadow: 0px 1px 5px 0px rgba(0,0,0,0.2);
 }
